# universal_comms_bot

./: .gitattributes  .gitignore  Cargo.toml  README.md
images/Demos/: .gitattributes
processor_binary/: Cargo.toml
processor_shared/: Cargo.toml
processor_shared/src/: lib.rs
processor_shared/src/league/: enemy_map_detection.rs  mod.rs
processor_shared/src/valorant/: enemy_pixel_detection.rs  mod.rs
universal_comms_bot/: Cargo.toml  build.rs
universal_comms_bot/libs/: OpenCL.lib
universal_comms_bot/src/: autogui.rs  main.rs  yeeter.rs
universal_comms_bot/src/managers/: league.rs  mod.rs
universal_comms_bot/src/managers/hsr/: divergent_universe_spammer.rs  hsr.rs  mod.rs  relic_farm.rs
universal_comms_bot/src/managers/league/: lock_in.rs  minimap.rs  mod.rs
universal_comms_bot/src/managers/valorant/: enemy_detection.rs  mod.rs
universal_comms_bot/src/screenshots/: capture.rs  frame.rs  mod.rs
