[package]
name = "universal_comms_bot"
version = "0.1.0"
edition = "2024"
default-run = "universal_comms_bot"

[dependencies]

crossbeam = "0.8.4"
windows-capture = "2.0.0-alpha.1"
processor_shared = { path = "../processor_shared" }
opencv = "0.96.0"
rodio = "0.21.1"
sysinfo = "0.37.1"
rustautogui = "2.5.0"